--- a/Netgsm/Netgsm.csproj
+++ b/Netgsm/Netgsm.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/ozgur-soft/Netgsm.NET</RepositoryUrl>
+    <Authors>Özgür Yalçın</Authors>
+    <Company>Özgürsoft</Company>
+    <Copyright>2022 Özgürsoft</Copyright>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
